# rl-energy-logger

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: analyze_results.py  config.py  kaggle_notebook.py  plot_results.py  run_benchmark.py  run_overhead.py
examples/: example_context_manager.py  example_sb3_callback.py
rl_energy_logger/: __init__.py  collector.py  energy.py  exceptions.py  sb3_callback.py  torch_wrapper.py  writers.py
tests/: test_collector.py  test_energy.py  test_exceptions.py  test_sb3_callback.py  test_torch_wrapper.py  test_writers.py
