[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_energy_logger"
version = "0.1.0" # Start versioning
authors = [
  { name="Abid Mohamed Nadhir", email="abid-mohamednadhir@univ-eloued.dz" }, #
]
description = "Lightweight energy and resource logging for Deep RL."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Development Status :: 3 - Alpha", # Starting point
]
dependencies = [
    "psutil>=5.8.0",
]

# Optional dependencies for specific features
[project.optional-dependencies]
gpu = ["nvidia-ml-py>=11.4.1"] # For NVIDIA GPU monitoring (provides pynvml module)
sb3 = ["stable-baselines3>=2.0.0"] # For Stable-Baselines3 callback
torch = ["torch>=1.8.0"] # For PyTorch wrapper (implicitly needed often)
dev = [ # For development and testing
    "pytest>=7.0.0",
    "tox>=4.0.0",
    "pre-commit>=2.15.0",
    "stable-baselines3>=2.0.0", # Need SB3 for testing its callback
    "torch>=1.8.0",            # Need torch for testing its wrapper
    "pandas>=1.3.0",           # Useful for checking outputs in tests/examples
    "rl_energy_logger[gpu,sb3,torch]", # Install all optional deps for dev
]


[project.urls]
"Homepage" = "https://github.com/abidmohamed/rl-energy-logger" # 
"Bug Tracker" = "https://github.com/abidmohamed/rl-energy-logger/issues" # 
# "Documentation" = "..." # For future versions
# "Source Code" = "..." # Same as Homepage

# Optional: Entry points for CLI (add cli.py later)
# [project.scripts]
# energy-log = "rl_energy_logger.cli:main"